@@ -1271,3 +1271,4 @@ MySQL logins and databases and DNS zones can now be created on a central Cloudmi
 Updated the Redmine script installer to version 1.1.0, Z-push to 1.5, DokuWiki to 2010-11-07a, ZenPhoto to 1.4.0.1, Zikula to 1.2.5, Bugzilla to 3.6.4, phpMyFAQ to 2.6.14, and SugarCRM to 6.1.1.
 Email to users that are with 100 kB of their quota is now bounced back to the sender, to prevent the mailbox from completely filling up and breaking Dovecot's avility to delete messages
 Email to users that are with 100 kB of their quota is now bounced back to the sender, to prevent the mailbox from completely filling up and breaking Dovecot's avility to delete messages.
+When adding an IPv6 address to a virtual server, an reverse DNS entry for the IP is also created if the IPv6 reverse zone is hosted on the Virtualmin system.
